# ur-epics-desktop

./: .gitignore  .iocsh_history  CMakeLists.txt  fake.db  fake_robot.db  imgui.ini  oh_state.db
resources/: robotiq-hand-e.mtl
resources/UR3e/: base.mtl  forearm.mtl  shoulder.mtl  upperarm.mtl  wrist1.mtl  wrist2.mtl  wrist3.mtl
resources/UR5e/: base.mtl  forearm.mtl  shoulder.mtl  upperarm.mtl  wrist1.mtl  wrist2.mtl  wrist3.mtl
resources/robotiq/: robotiq_hand-e_body.mtl  robotiq_hand-e_finger-left.mtl
src/: demo.cpp  ezec.hpp  main.cpp  main.txt  pace.hpp  rl_utils.cpp  rl_utils.hpp  ur.cpp  ur.hpp
